--- a/DragonStarArena/DragonStarArena.vcxproj.filters
+++ b/DragonStarArena/DragonStarArena.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="data\aura.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="scene\dungeonMapScene.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="core\game.hpp">
@@ -183,6 +186,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="data\aura.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="scene\dungeonMapScene.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
