added gold and dust window

--- a/DragonStarArena/DragonStarArena.vcxproj.filters
+++ b/DragonStarArena/DragonStarArena.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClCompile Include="entity\encounterNode.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ui\resourceWindow.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="core\game.hpp">
@@ -201,6 +204,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="data\id\encounterType.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ui\resourceWindow.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
