--- a/DragonStarArena/DragonStarArena.vcxproj
+++ b/DragonStarArena/DragonStarArena.vcxproj
@@ -169,6 +169,7 @@
     <ClCompile Include="scene\mainMenuScene.cpp" />
     <ClCompile Include="ui\button.cpp" />
     <ClCompile Include="ui\fpsWindow.cpp" />
+    <ClCompile Include="ui\resourceWindow.cpp" />
     <ClCompile Include="ui\richText.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -212,6 +213,7 @@
     <ClInclude Include="scene\mainMenuScene.hpp" />
     <ClInclude Include="ui\button.hpp" />
     <ClInclude Include="ui\fpsWindow.hpp" />
+    <ClInclude Include="ui\resourceWindow.hpp" />
     <ClInclude Include="ui\richText.hpp" />
   </ItemGroup>
   <ItemGroup>
