--- a/DragonStarArena/DragonStarArena.vcxproj
+++ b/DragonStarArena/DragonStarArena.vcxproj
@@ -169,6 +169,7 @@
     <ClCompile Include="scene\mainMenuScene.cpp" />
     <ClCompile Include="ui\button.cpp" />
     <ClCompile Include="ui\fpsWindow.cpp" />
+    <ClCompile Include="ui\inventoryList.cpp" />
     <ClCompile Include="ui\resourceWindow.cpp" />
     <ClCompile Include="ui\richText.cpp" />
   </ItemGroup>
@@ -212,7 +213,9 @@
     <ClInclude Include="scene\dungeonMapScene.hpp" />
     <ClInclude Include="scene\mainMenuScene.hpp" />
     <ClInclude Include="ui\button.hpp" />
+    <ClInclude Include="ui\dataString.hpp" />
     <ClInclude Include="ui\fpsWindow.hpp" />
+    <ClInclude Include="ui\inventoryList.hpp" />
     <ClInclude Include="ui\resourceWindow.hpp" />
     <ClInclude Include="ui\richText.hpp" />
   </ItemGroup>
