--- a/DragonStarArena/DragonStarArena.vcxproj
+++ b/DragonStarArena/DragonStarArena.vcxproj
@@ -168,10 +168,12 @@
     <ClCompile Include="scene\dungeonMapScene.cpp" />
     <ClCompile Include="scene\mainMenuScene.cpp" />
     <ClCompile Include="ui\button.cpp" />
+    <ClCompile Include="ui\dataString.cpp" />
     <ClCompile Include="ui\fpsWindow.cpp" />
     <ClCompile Include="ui\inventoryList.cpp" />
     <ClCompile Include="ui\resourceWindow.cpp" />
     <ClCompile Include="ui\richText.cpp" />
+    <ClCompile Include="ui\tooltip.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="core\assetManager.hpp" />
@@ -218,6 +220,7 @@
     <ClInclude Include="ui\inventoryList.hpp" />
     <ClInclude Include="ui\resourceWindow.hpp" />
     <ClInclude Include="ui\richText.hpp" />
+    <ClInclude Include="ui\tooltip.hpp" />
   </ItemGroup>
   <ItemGroup>
     <CopyFileToFolders Include="..\..\..\..\Dakota\Documents\Arena Master Project\dsa_data.db">
