--- a/DragonStarArena/DragonStarArena.vcxproj.filters
+++ b/DragonStarArena/DragonStarArena.vcxproj.filters
@@ -93,6 +93,9 @@
     <ClCompile Include="ui\equipWindow.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ui\abilityWindow.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="core\game.hpp">
@@ -231,6 +234,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ui\equipWindow.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ui\abilityWindow.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
