ported text box

--- a/DragonStarArena/DragonStarArena.vcxproj.filters
+++ b/DragonStarArena/DragonStarArena.vcxproj.filters
@@ -96,6 +96,9 @@
     <ClCompile Include="ui\abilityWindow.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ui\textBox.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="core\game.hpp">
@@ -240,6 +243,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ui\dropdown.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ui\textBox.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
